# hermes-memory-providers

./: AGENTS.md  LICENSE  README.md  mise.toml  pyproject.toml  setup.sh
engram/: README.md  __init__.py  client.py  plugin.yaml  schemas.py
plugins/context_engine/: DESCRIPTION.md
plugins/context_engine/engram/: README.md  __init__.py  plugin.yaml
plugins/engram/: README.md  __init__.py  schemas.py  tools.py
plugins/memory/: DESCRIPTION.md
plugins/memory/engram/: README.md  __init__.py  cli.py  plugin.yaml  schemas.py  tools.py
scripts/: install.py  list.py  uninstall.py  update.py
