[project]
name = "hermes-memory-providers"
version = "1.0.0"
description = "Memory provider plugins for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "shutilwhich>=1.0.0",
]

[project.scripts]
hm-install = "scripts.install:main"
hm-uninstall = "scripts.uninstall:main"
hm-update = "scripts.update:main"
hm-list = "scripts.list:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
